--- a/index.html
+++ b/index.html
@@ -4,17 +4,31 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Prueba</title>
+    <title>cajistrators</title>
     <meta name="Marc Reus, Reitman LL, Daniel Garcia" content="Josep">
     <meta name="description" content="plantilla">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="#">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
+<p>
+<h1>cajistrators</h1>
+<hr>
+</p>
 
 <body>
     <header>
-        
+        <br>
+        <p>
+        <h2>Qui som?</h2>
+        </p>
+        <p>Som un grup de 3 estudiants que ens hem unit per crear una pagina web sobre caixes.</p>
+        <br>
+        <p>La pàgina web tracta sobre les Cajistrators, A través del lloc web, es
+            presenten els diferents models de caixes, les seves característiques, usos
+            possibles i com adquirir-les. La temàtica principal gira entorn de la creativitat,
+            el disseny i la utilitat d’aquestes caixes innovadores.</p>
+
     </header>
 
     <nav>
