--- a/index.html
+++ b/index.html
@@ -28,7 +28,15 @@
             presenten els diferents models de caixes, les seves característiques, usos
             possibles i com adquirir-les. La temàtica principal gira entorn de la creativitat,
             el disseny i la utilitat d’aquestes caixes innovadores.</p>
-
+        <br>
+        <img src="./img/caixa-de-cartró.jpg" alt="caixa de cartró" width="400" height="300">
+        <br>
+        <hr>
+        <h2>A continuació os mostrarem un video sobre la creació de caixes en diferents tamanys</h2>
+        <br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/5-g0wUWuv_M?si=sfO9Z0TT461RdPWC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <br>
+        <hr>
     </header>
 
     <nav>
