--- a/Register.html
+++ b/Register.html
@@ -21,7 +21,7 @@
                      <input id="pwd" type="password" placeholder="Introdueix la teva contrasenya que sigui segura" name="password" required>
                 </p>
                 <p>
-                    <button type="submit">Login</button>
+                    <li><a href="index.html"><button type="submit">Login</button></a></li>
                 </p>
             </form>
     </body>
