--- a/Contact.html
+++ b/Contact.html
@@ -10,9 +10,21 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <h1>Contacts
+        <h1>Contacte amb nosoltres
         </h1>
-        <img src="img/images.jpg" alt="en construccion">
-        <p>Aquesta part esta en construccio, aviat estara</p>
+        <br>
+        <hr>
+        <h3>La nostra ubicació</h3>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2992.2027936439535!2d2.1774323156748854!3d41.38701597926367!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a4a2f5e6f5e8b7%3A0x42e6e8e6e8e6e8e6!2sC%2F%20de%20les%20Caixes%2C%2042%2C%2008000%20Barcelona%2C%20Espanya!5e0!3m2!1sca!2sus!4v1616161616161!5m2!1sca!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <br>
+        <hr>
+        <br>
+        <h3>C/ de les Caixes, 42, 08000 Barcelona</h3>
+        <br>
+        <hr>
+        <br>
+        <h3>Telèfon: +34 123 456 789</h3>
+    
+
     </body>
 </html>
