--- a/index.html
+++ b/index.html
@@ -47,8 +47,19 @@
 
     </main>
 
-    <footer>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
+    <footer>
+    On ens trobem: C/ de les Caixes, 42, 08000 Barcelona
+    </br>
+    Telèfon: +34 123 456 789
+    </br>
+    Correu electrònic: cajistrators@gmail.com
     </footer>
 
 </body>
