--- a/index.html
+++ b/index.html
@@ -37,8 +37,12 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/5-g0wUWuv_M?si=sfO9Z0TT461RdPWC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <br>
         <hr>
+        <h2>Tipus de caixes</h2>
+        <br>
+        <table>
+            
+        </table>
     </header>
-
     <nav>
 
     </nav>
@@ -47,21 +51,7 @@
 
     </main>
 
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-    <footer>
-    On ens trobem: C/ de les Caixes, 42, 08000 Barcelona
-    </br>
-    Telèfon: +34 123 456 789
-    </br>
-    Correu electrònic: cajistrators@gmail.com
-    </footer>
-
+    <footer></footer>
 </body>
 
 </html>
