--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 
         <section>
             <h2>El nostre equip</h2>
-            <p>El nostre equip està format per experts en diferents àrees, incloent disseny, desenvolupament web, màrqueting i atenció al client. Treballem junts per assegurar-nos que cada aspecte de Cajillators sigui de la més alta qualitat i que els nostres usuaris tinguin la millor experiència possible.</p>
+            <p>El nostre equip està format per experts en diferents àrees, incloent disseny, desenvolupament web, màrqueting i atenció al client. Treballem junts per assegurar-nos que cada aspecte de Cajillators sigui de la més alta qualitat i que els nostres usuaris tinguin la millor experiència possible</p>
         </section>
 
         <section>
