--- a/obout.html
+++ b/obout.html
@@ -48,8 +48,8 @@
 
         <section>
             <h2>Contacta'ns</h2>
-            <p>Si tens alguna pregunta, suggeriment o simplement vols dir hola, no dubtis en posar-te en contacte amb nosaltres a través del nostre formulari de contacte o enviant-nos un correu electrònic a
-            <br> <hr>
+            <p>Si tens alguna pregunta, suggeriment o simplement vols dir hola, no dubtis en posar-te en contacte amb nosaltres a través del nostre formulari de contacte o enviant-nos un correu electrònic a  </p>
+        </section>
     </main>
 
     <footer>
