--- a/index.html
+++ b/index.html
@@ -39,8 +39,25 @@
         <hr>
         <h2>Tipus de caixes</h2>
         <br>
-        <table>
-            
+        <table border="1">
+            <tr>
+            <tr colspan="2">Tipus de caixes</tr>
+            <th>Preu</th>
+            </tr>
+            <tr>
+                <td>Fusta</td>
+                <td>5 euros</td>
+            </tr>
+            <tr>
+                <td>Cartró</td>
+                <td>3 euros</td>
+            </tr>
+            <tr>
+                <td>Plàstic</td>
+                <td>4 euros</td>
+            </tr>
+
+
         </table>
     </header>
     <nav>
