--- a/index.html
+++ b/index.html
@@ -11,62 +11,68 @@
     <link rel="icon" type="image/x-icon" href="#">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
-<p>
-<h1>cajistrators</h1>
-<hr>
-</p>
 
 <body>
     <header>
+        <h1>cajistrators</h1>
+        <hr>
         <br>
-        <p>
+
         <h2>Qui som?</h2>
-        </p>
-        <p>Som un grup de 3 estudiants que ens hem unit per crear una pagina web sobre caixes.</p>
         <br>
-        <p>La pàgina web tracta sobre les Cajistrators, A través del lloc web, es
-            presenten els diferents models de caixes, les seves característiques, usos
-            possibles i com adquirir-les. La temàtica principal gira entorn de la creativitat,
-            el disseny i la utilitat d’aquestes caixes innovadores.</p>
-        <br>
+        <p>Som un grup de 3 estudiants que ens hem unit per crear una pàgina web sobre caixes.</p>
+
+        <p>La pàgina web tracta sobre les Cajistrators. A través del lloc web, es presenten els diferents models de
+            caixes, les seves característiques, usos possibles i com adquirir-les. La temàtica principal gira entorn de
+            la creativitat, el disseny i la utilitat d’aquestes caixes innovadores.</p>
+
         <img src="./img/caixa-de-cartró.jpg" alt="caixa de cartró" width="400" height="300">
-        <br>
+
         <hr>
-        <h2>A continuació os mostrarem un video sobre la creació de caixes en diferents tamanys</h2>
-        <br>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/5-g0wUWuv_M?si=sfO9Z0TT461RdPWC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <br>
+
+        <h2>A continuació us mostrarem un vídeo sobre la creació de caixes en diferents tamanys</h2>
+        <iframe class="video" width="560" height="315"
+            src="https://www.youtube.com/embed/5-g0wUWuv_M?si=sfO9Z0TT461RdPWC" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
         <hr>
+
         <h2>Tipus de caixes</h2>
         <br>
+        <p>A continuació us explicarem els tipus de caixes i les seves característiques:</p>
+        <br>
+
         <table border="1">
             <tr>
-            <tr colspan="2">Tipus de caixes</tr>
-            <th>Preu</th>
+                <th>Tipus de caixa</th>
+                <th>Descripció</th>
             </tr>
             <tr>
-                <td>Fusta</td>
-                <td>5 euros</td>
+                <td>Caixa de cartró</td>
+                <td>Una caixa lleugera i econòmica, ideal per a l'enviament de productes lleugers i fràgils.</td>
             </tr>
             <tr>
-                <td>Cartró</td>
-                <td>3 euros</td>
+                <td>Caixa de fusta</td>
+                <td>Una caixa robusta i duradora, perfecta per a l'emmagatzematge i el transport de productes pesats o
+                    voluminosos.</td>
             </tr>
             <tr>
-                <td>Plàstic</td>
-                <td>4 euros</td>
+                <td>Caixa metàl·lica</td>
+                <td>Una caixa resistent i segura, adequada per a la protecció d'objectes valuosos o sensibles.</td>
             </tr>
-
-
+            <tr>
+                <td>Caixa de plàstic</td>
+                <td>Una caixa versàtil i lleugera, ideal per a l'emmagatzematge i l'organització d'objectes diversos.
+                </td>
+            </tr>
+            <tr>
+                <td>Caixa de vidre</td>
+                <td>Una caixa elegant i transparent, perfecta per a l'exhibició d'objectes decoratius o
+                    col·leccionables.</td>
+            </tr>
         </table>
     </header>
-    <nav>
-
-    </nav>
-
     <main>
-
     </main>
-</body>
-
-</html>
