--- a/Contact.html
+++ b/Contact.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <h1>Contacte amb nosoltres
+        <h1>Contacte amb nosaltres
         </h1>
         <br>
         <hr>
