--- a/obout.html
+++ b/obout.html
@@ -20,8 +20,7 @@
     <nav>
         Nosaltres, els fundadadors de Cajillators, som un grup d'estudiants apassionats per las caixes. La nostra missió ensenyarvos les nostres caixes preferides. Amb una combinació d'experiència en creament de caixes de tot tipus, disseny i atenció al client, estem compromesos a oferir caixes de qualitat que satisfacin les necessitats dels nostres usuaris. 
     </nav>
-    <br> <hr>
-    <img src="./img/IMG-20250205-WA0025.jpg" alt="150x150" width="150" height="150"> <img src="./img/IMG-20251004-WA0012.jpg" alt="150x150" width="150" height="150"><img src="./img/leiman.png" alt="150x150" width="150" height="150">
+    <p></p>
     <br> <hr>
     <main>
         <section>
@@ -51,6 +50,21 @@
             <h2>Contacta'ns</h2>
             <p>Si tens alguna pregunta, suggeriment o simplement vols dir hola, no dubtis en posar-te en contacte amb nosaltres a través del nostre formulari de contacte o enviant-nos un correu electrònic a  </p>
         </section>
+    
+        <table border="1">
+            <tr>
+                <td>Alejandro Reitman Llave Huanca</td>
+                <td><img src="./img/leiman.png" alt="Dani" width="150" height="150"></td>
+            </tr>
+            <tr>
+                <td>Daniel Garcia Romero</td>
+                <td><img src="./img/IMG-20251004-WA0012.jpg" alt="Dani" width="150" height="150"></td>
+            </tr>
+            <tr>
+                <td>Marc Reus Jimenez</td>
+                <td><img src="./img/IMG-20250205-WA0025.jpg" alt="Marc" width="150" height="150></td>
+            </tr>
+
     </main>
 
     <footer>
