--- a/obout.html
+++ b/obout.html
@@ -48,7 +48,7 @@
 
         <section>
             <h2>Contacta'ns</h2>
-            <p>Si tens alguna pregunta, suggeriment o simplement vols dir hola, no dubtis en posar-te en contacte amb nosaltres a través del nostre formulari de contacte o enviant-nos un correu electrònic a  </p>
+            <p>Si tenss alguna pregunta, suggeriment o simplement vols dir hola, no dubtis en posar-te en contacte amb nosaltres a través del nostre formulari de contacte o enviant-nos un correu electrònic a  </p>
         </section>
     
         <table border="1">
