--- a/obout.html
+++ b/obout.html
@@ -20,7 +20,6 @@
     <nav>
         Nosaltres, els fundadadors de Cajillators, som un grup d'estudiants apassionats per las caixes. La nostra missió ensenyarvos les nostres caixes preferides. Amb una combinació d'experiència en creament de caixes de tot tipus, disseny i atenció al client, estem compromesos a oferir caixes de qualitat que satisfacin les necessitats dels nostres usuaris. 
     </nav>
-    <p></p>
     <br> <hr>
     <main>
         <section>
@@ -36,23 +35,9 @@
         </section>
             <br> <hr>
         <section>
-            <h2>Els nostres valors</h2>
-            <ul>
-                <li><strong>Qualitat:</strong> Ens esforcem per oferir només les millors caixes i contingut de qualitat als nostres usuaris.</li>
-                <li><strong>Innovació:</strong> Estem sempre a la recerca de noves idees i tecnologies per millorar la nostra plataforma i els nostres serveis.</li>
-                <li><strong>Atenció al client:</strong> La satisfacció dels nostres usuaris és la nostra prioritat número u. Estem aquí per ajudar-vos en tot el que necessiteu.</li>
-                <li><strong>Comunitat:</strong> Creiem en la importància de construir una comunitat d'amants de les caixes on puguem compartir coneixements i experiències.</li>
-            </ul>
-            <br> <hr>
-        </section>
-
-        <section>
-            <h2>Contacta'ns</h2>
-            <p>Si tenss alguna pregunta, suggeriment o simplement vols dir hola, no dubtis en posar-te en contacte amb nosaltres a través del nostre formulari de contacte o enviant-nos un correu electrònic a  </p>
-        </section>
-    
-        <table border="1">
-            <tr>
+            <h2>Nosaltres</h2>
+            <table>
+                            <tr>
                 <td>Alejandro Reitman Llave Huanca</td>
                 <td><img src="./img/leiman.png" alt="Dani" width="150" height="150"></td>
             </tr>
@@ -62,16 +47,17 @@
             </tr>
             <tr>
                 <td>Marc Reus Jimenez</td>
-                <td><img src="./img/IMG-20250205-WA0025.jpg" alt="Marc" width="150" height="150></td>
+                <td><img src="./img/IMG-20250205-WA0025.jpg" alt="Marc" width="150" height="150"></td>
             </tr>
+            </table>
 
+            <br> <hr>
+        </section>
 
-    </main>
-
-    <footer>
-
-    </footer>
-
+        <section>
+            <h2>Contacta'ns</h2>
+            <p>Si tenss alguna pregunta, suggeriment o simplement vols dir hola, no dubtis en posar-te en contacte amb nosaltres a través del nostre formulari de contacte o enviant-nos un correu electrònic a  </p>
+        </section>
 </body>
 
 </html>
