--- a/obout.html
+++ b/obout.html
@@ -1,63 +1,63 @@
 <!DOCTYPE html>
 <html lang="ca">
-
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>About Us</title>
+    <title>Sobre nosaltres</title>
     <meta name="author" content="Dani">
     <meta name="description" content="Cajillators">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="Cajalogo.jpeg">
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
     <header>
-        <h1>Sobre nosaltres</h1> <hr>
+        <h1>Sobre nosaltres</h1>
+        <hr>
     </header>
 
-    <nav>
-        Nosaltres, els fundadadors de Cajillators, som un grup d'estudiants apassionats per las caixes. La nostra missió ensenyarvos les nostres caixes preferides. Amb una combinació d'experiència en creament de caixes de tot tipus, disseny i atenció al client, estem compromesos a oferir caixes de qualitat que satisfacin les necessitats dels nostres usuaris. 
-    </nav>
-    <br> <hr>
+    <section>
+        <p>Nosaltres, els fundadors de Cajillators, som un grup d'estudiants apassionats per les caixes. 
+        La nostra missió és ensenyar-vos les nostres caixes preferides. Amb una combinació d'experiència en la creació de caixes de tot tipus, disseny i atenció al client, estem compromesos a oferir caixes de qualitat que satisfacin les necessitats dels nostres usuaris.</p>
+    </section>
+    <hr>
+
     <main>
         <section>
-        
             <h2>La nostra història</h2>
-            <p>Tot va començar amb una simple idea: crear una plataforma on els amants de les caixes poguessin trobar informació, ressenyes i recomanacions sobre les millors caixes del mercat. Vam començar com un petit projecte entre amics, però aviat vam veure el potencial de la nostra idea i vam decidir convertir-la en una realitat.</p>
-        <br> <hr>
+            <p>Tot va començar amb una simple idea...</p>
+            <hr>
         </section>
 
         <section>
             <h2>El nostre equip</h2>
-            <p>El nostre equip està format per experts en diferents àrees, incloent disseny, desenvolupament web, màrqueting i atenció al client. Treballem junts per assegurar-nos que cada aspecte de Cajillators sigui de la més alta qualitat i que els nostres usuaris tinguin la millor experiència possible.</p>
+            <p>El nostre equip està format per experts...</p>
+            <hr>
         </section>
-            <br> <hr>
+
         <section>
             <h2>Nosaltres</h2>
-            <table>
-                            <tr>
-                <td>Alejandro Reitman Llave Huanca</td>
-                <td><img src="./img/leiman.png" alt="Dani" width="150" height="150"></td>
-            </tr>
-            <tr>
-                <td>Daniel Garcia Romero</td>
-                <td><img src="./img/IMG-20251004-WA0012.jpg" alt="Dani" width="150" height="150"></td>
-            </tr>
-            <tr>
-                <td>Marc Reus Jimenez</td>
-                <td><img src="./img/IMG-20250205-WA0025.jpg" alt="Marc" width="150" height="150"></td>
-            </tr>
+            <table border="1">
+                <tr>
+                    <td>Alejandro Reitman Llave Huanca</td>
+                    <td><img src="./img/leiman.png" alt="Alejandro" width="150" height="150"></td>
+                </tr>
+                <tr>
+                    <td>Daniel Garcia Romero</td>
+                    <td><img src="./img/IMG-20251004-WA0012.jpg" alt="Daniel" width="150" height="150"></td>
+                </tr>
+                <tr>
+                    <td>Marc Reus Jimenez</td>
+                    <td><img src="./img/IMG-20250205-WA0025.jpg" alt="Marc" width="150" height="150"></td>
+                </tr>
             </table>
-
-            <br> <hr>
+            <hr>
         </section>
 
         <section>
             <h2>Contacta'ns</h2>
-            <p>Si tenss alguna pregunta, suggeriment o simplement vols dir hola, no dubtis en posar-te en contacte amb nosaltres a través del nostre formulari de contacte o enviant-nos un correu electrònic a  </p>
+            <p>Si tens alguna pregunta, suggeriment o simplement vols dir hola, no dubtis en posar-te en contacte amb nosaltres.</p>
         </section>
+    </main>
 </body>
-
 </html>
