--- a/obout.html
+++ b/obout.html
@@ -40,7 +40,7 @@
             <table border="1">
                 <tr>
                     <td>Alejandro Reitman Llave Huanca</td>
-                    <td><img src="./img/leiman.png" alt="Alejandro" width="150" height="150"></td>
+                    <td><img src="" alt="Alejandro" width="150" height="150"></td>
                 </tr>
                 <tr>
                     <td>Daniel Garcia Romero</td>
