--- a/obout.html
+++ b/obout.html
@@ -17,7 +17,7 @@
     </header>
 
     <section>
-        <p>Nosaltres, els fundadors de Cajillators, som un grup d'estudiants apassionats per les caixes. 
+        <p>Nosaltres, els fundadors de Cajillators, som un grup d'estudiants apassionats per les caixes i la seva creació. 
         La nostra missió és ensenyar-vos les nostres caixes preferides. Amb una combinació d'experiència en la creació de caixes de tot tipus, disseny i atenció al client, estem compromesos a oferir caixes de qualitat que satisfacin les necessitats dels nostres usuaris.</p>
     </section>
     <hr>
