--- a/obout.html
+++ b/obout.html
@@ -17,7 +17,7 @@
     </header>
 
     <section>
-        <p>Nosaltres, els fundadors de Cajillators, som un grup d'estudiants apassionats per les caixes i la seva creació. 
+        <p>Nosaltres, els fundadors de Cajillators, som un grup d'estudiants apassionats per les caixes i la seva creació.
         La nostra missió és ensenyar-vos les nostres caixes preferides. Amb una combinació d'experiència en la creació de caixes de tot tipus, disseny i atenció al client, estem compromesos a oferir caixes de qualitat que satisfacin les necessitats dels nostres usuaris.</p>
     </section>
     <hr>
@@ -25,7 +25,7 @@
     <main>
         <section>
             <h2>La nostra història</h2>
-            <p>Tot va començar amb una simple idea...</p>
+            <p>Tot va començar amb una simple idea, compartir el nostre amor per les caixes a tothom. El nostre amor per las caixes va comencar cuan els 3 anavem a 3r de primaria cuan  </p>
             <hr>
         </section>
 
