--- a/obout.html
+++ b/obout.html
@@ -25,12 +25,12 @@
     <main>
         <section>
             <h2>La nostra història</h2>
-            <p>Tot va començar amb una simple idea, compartir el nostre amor per les caixes a tothom. El nostre amor per las caixes va comencar cuan els 3 anavem a 3r de primaria quan  ens vam trobar un vestit de maid dins d'una caixa a un parc a prop de la nostra escola, llavors vam decidir comencar a sagrestar avies per vestirles de maids i venguesin patates per fer competencia a la patateria d'aqui al costat, pero lamentablement ens van denunciar per possesió ilegal de patates. Vam lluitar contra la policia el que va acabar amb la mort de el nostre 4rt amic, el Kevin, llavors vam decidir crear aquesta pagina en el seu honor i es seu amor per las caixes  </p>
+            <p>Tot va començar amb una simple idea, compartir el nostre amor per les caixes a tothom. El nostre amor per las caixes va comencar cuan els 3 anavem a 3r de primaria quan  ens vam trobar un vestit de maid dins d'una caixa a un parc a prop de la nostra escola, llavors vam decidir comencar a sagrestar avies per vestirles de maids i venguesin patates per fer competencia a la patateria d'aqui al costat, pero lamentablement ens van denunciar per possesió ilegal de patates. Vam lluitar contra la policia el que va acabar amb la mort de el nostre 4rt amic, el Kevin, llavors vam decidir crear aquesta pagina en el seu honor i es seu amor per las caixes.  </p>
             <hr>
         </section>
 
         <section>
-            <h2>El nostre equip</h2>
+            <h2>El nostre equip </h2>
             <p>El nostre equip està format per experts...</p>
             <hr>
         </section>
