--- a/obout.html
+++ b/obout.html
@@ -25,13 +25,17 @@
     <main>
         <section>
             <h2>La nostra història</h2>
-            <p>Tot va començar amb una simple idea, compartir el nostre amor per les caixes a tothom. El nostre amor per las caixes va comencar cuan els 3 anavem a 3r de primaria quan  ens vam trobar un vestit de maid dins d'una caixa a un parc a prop de la nostra escola, llavors vam decidir comencar a sagrestar avies per vestirles de maids i venguesin patates per fer competencia a la patateria d'aqui al costat, pero lamentablement ens van denunciar per possesió ilegal de patates. Vam lluitar contra la policia el que va acabar amb la mort de el nostre 4rt amic, el Kevin, llavors vam decidir crear aquesta pagina en el seu honor i es seu amor per las caixes.  </p>
+            <p>
+Nuestra historia comienza con una idea clara: crear cajas que protejan, comuniquen y aporten valor a cada producto. Desde nuestros inicios, hemos trabajado con el compromiso de ofrecer soluciones de empaque resistentes, funcionales y adaptadas a las necesidades de cada cliente.
+A lo largo del tiempo, hemos crecido gracias a la confianza de empresas que buscan calidad, cumplimiento y atención personalizada. Hemos incorporado mejores procesos, materiales más eficientes y un enfoque responsable con el medio ambiente, sin perder la esencia de un trabajo bien hecho.
+Hoy, seguimos evolucionando con la misma pasión que nos vio nacer, fabricando cajas que no solo cumplen su función, sino que también representan la imagen y el esfuerzo de quienes confían en nosotros.
+  </p>
             <hr>
         </section>
 
         <section>
             <h2>El nostre equip </h2>
-            <p>El nostre equip està format per experts...</p>
+            <p>El nostre equip està format per experts experts de las caixes,  persones que estarien dispostes a vendre a la seva filla per poder conseguir una caixa exclusiva com per exemple una caixa de happy meal 1999 edició ronald mcdonalds super sayan 2. Amb una combinació d'habilitats en disseny, enginyeria i atenció al client, treballem junts per oferir les millors caixes del mercat.</p>
             <hr>
         </section>
 
