--- a/obout.html
+++ b/obout.html
@@ -26,9 +26,9 @@
         <section>
             <h2>La nostra història</h2>
             <p>
-Nuestra historia comienza con una idea clara: crear cajas que protejan, comuniquen y aporten valor a cada producto. Desde nuestros inicios, hemos trabajado con el compromiso de ofrecer soluciones de empaque resistentes, funcionales y adaptadas a las necesidades de cada cliente.
-A lo largo del tiempo, hemos crecido gracias a la confianza de empresas que buscan calidad, cumplimiento y atención personalizada. Hemos incorporado mejores procesos, materiales más eficientes y un enfoque responsable con el medio ambiente, sin perder la esencia de un trabajo bien hecho.
-Hoy, seguimos evolucionando con la misma pasión que nos vio nacer, fabricando cajas que no solo cumplen su función, sino que también representan la imagen y el esfuerzo de quienes confían en nosotros.
+Our story begins with a clear idea: to create boxes that protect, communicate, and add value to every product. Since our inception, we have been committed to offering durable, functional packaging solutions tailored to each client's needs.
+Over time, we have grown thanks to the trust of companies that seek quality, reliability, and personalized service. We have incorporated improved processes, more efficient materials, and a responsible approach to the environment, without losing sight of the essence of a job well done.
+Today, we continue to evolve with the same passion that gave us our start, manufacturing boxes that not only fulfill their function but also represent the image and effort of those who place their trust in us.
   </p>
             <hr>
         </section>
