--- a/obout.html
+++ b/obout.html
@@ -26,9 +26,9 @@
         <section>
             <h2>La nostra història</h2>
             <p>
-Our story begins with a clear idea: to create boxes that protect, communicate, and add value to every product. Since our inception, we have been committed to offering durable, functional packaging solutions tailored to each client's needs.
-Over time, we have grown thanks to the trust of companies that seek quality, reliability, and personalized service. We have incorporated improved processes, more efficient materials, and a responsible approach to the environment, without losing sight of the essence of a job well done.
-Today, we continue to evolve with the same passion that gave us our start, manufacturing boxes that not only fulfill their function but also represent the image and effort of those who place their trust in us.
+La nostra història comença amb una idea clara: crear caixes que protegeixin, comuniquin i aportin valor a cada producte. Des dels nostres inicis, hem treballat amb el compromís d'oferir solucions d'empaquetatge resistents, funcionals i adaptades a les necessitats de cada client.
+Al llarg del temps, hem crescut gràcies a la confiança d'empreses que cerquen qualitat, acompliment i atenció personalitzada. Hem incorporat millors processos, materials més eficients i un enfocament responsable amb el medi ambient, sense perdre l'essència d'una feina ben feta.
+Avui seguim evolucionant amb la mateixa passió que ens va veure néixer, fabricant caixes que no només compleixen la seva funció, sinó que també representen la imatge i l'esforç dels que confien en nosaltres.
   </p>
             <hr>
         </section>
