--- a/login.html
+++ b/login.html
@@ -1,30 +1,36 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="utf-8">
+    <title>Login</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="./css/style.css">
+</head>
 
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>login</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="./css/style.css">
-    </head>
-    <body>
-        <h1>Login</h1>
+<body>
+
+    <div class="login-container">
+        <h1>LOGIN</h1>
+
         <img src="./img/Iniciar_sessio.png" alt="Iniciar sessio" class="login-img">
-            <form action="index.html" method="POST" class="login">
-                <p>
-                    <label for="user"><b>Usuari</b></label>
-                    <input id="user" type="text" placeholder="Introdueix el teu usuari" name="uname" required>
-                </p>
-                <p>
-                    <label for="pwd"><b>Contrasenya</b></label>
-                    <input id="pwd" type="password" placeholder="Introdueix la teva contrasenya" name="password" required>
-                </p>
-                <div class="cuenta">
-                    <p>No tens un compte?<a href="Register.html">Entra aqui</a></p>
-                </div>
-            </form>
-                 <p><li><a href="index.html"><button type="submit" class="btn-1">Iniciar sessio</button></a></li></p>
-    </body>
+
+        <form action="index.html" method="POST" class="login">
+
+            <label for="user"><b>Usuari</b></label>
+            <input id="user" type="text" placeholder="Introdueix el teu usuari" name="uname" required>
+
+            <label for="pwd"><b>Contrasenya</b></label>
+            <input id="pwd" type="password" placeholder="Introdueix la teva contrasenya" name="password" required>
+
+            <p class="cuenta">
+                No tens un compte? <a href="Register.html">Entra aquí</a>
+            </p>
+
+            <button type="submit" class="btn-1">Iniciar sessió</button>
+
+        </form>
+    </div>
+
+</body>
 </html>
