--- a/index.html
+++ b/index.html
@@ -17,6 +17,20 @@
         <h1>cajistrators</h1>
         <hr>
         <br>
+        <div class="menu container">
+            <input type="checkbox" id="menu">
+            <label for="menu">
+                <img src="img/menu.png" class="menu-icono" alt="">
+            </label>
+            <nav class="navbar">
+                <ul>
+                    <li><a href="#">Inici</a></li>
+                    <li><a href="#">Contactans</a></li>
+                    <li><a href="#">Sobre nosaltres</a></li>
+                    <li><a href="#">Inicia sessió</a></li>
+                </ul>
+            </nav>
+        </div>
         <h2>Qui som?</h2>
         <br>
         <p>Som un grup de 3 estudiants que ens hem unit per crear una pàgina web sobre caixes.</p>
@@ -74,5 +88,6 @@
         </table>
     </header>
     <main>
-</main>
+    </main>
 </body>
+</html>
