--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         <div class="menu container">
             <input type="checkbox" id="menu">
             <label for="menu">
-                <img src="img/menu.png" class="menu-icono" alt="">
+                <img src="img/menu.png" class="menu-icono" alt="Menú">
             </label>
             <nav class="navbar">
                 <ul>
-                    <li><a href="#">Inici</a></li>
-                    <li><a href="#">Contactans</a></li>
-                    <li><a href="#">Sobre nosaltres</a></li>
-                    <li><a href="#">Inicia sessió</a></li>
+                    <li><a href="index.html">Inici</a></li>
+                    <li><a href="Contact.html">Contactans</a></li>
+                    <li><a href="obout.html">Sobre nosaltres</a></li>
+                    <li><a href="login.html">Inicia sessió</a></li>
                 </ul>
             </nav>
         </div>
