--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="menu container">
             <input type="checkbox" id="menu">
             <label for="menu">
-                <img src="img/menu.png" class="menu-icono" alt="Menú">
+                <img src="img/image (1).png" class="menu-icono" alt="Menú">
             </label>
             <nav class="navbar">
                 <ul>
