--- a/obout.html
+++ b/obout.html
@@ -14,6 +14,20 @@
     <header>
         <h1>Sobre nosaltres</h1>
         <hr>
+        <div class="menu container">
+            <input type="checkbox" id="menu">
+            <label for="menu">
+                <img src="img/image (1).png" class="menu-icono" alt="Menú">
+            </label>
+            <nav class="navbar">
+                <ul>
+                    <li><a href="index.html">Inici</a></li>
+                    <li><a href="Contact.html">Contactans</a></li>
+                    <li><a href="obout.html">Sobre nosaltres</a></li>
+                    <li><a href="login.html">Inicia sessió</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <section>
