--- a/Contact.html
+++ b/Contact.html
@@ -14,6 +14,20 @@
         </h1>
         <br>
         <hr>
+        <div class="menu container">
+            <input type="checkbox" id="menu">
+            <label for="menu">
+                <img src="img/image (1).png" class="menu-icono" alt="Menú">
+            </label>
+            <nav class="navbar">
+                <ul>
+                    <li><a href="index.html">Inici</a></li>
+                    <li><a href="Contact.html">Contactans</a></li>
+                    <li><a href="obout.html">Sobre nosaltres</a></li>
+                    <li><a href="login.html">Inicia sessió</a></li>
+                </ul>
+            </nav>
+        </div>
         <h3>La nostra ubicació</h3>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2993.5726609537073!2d2.1674748119989986!3d41.38336837118066!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a4a2f687ae68cd%3A0x94e535333dfcc1a3!2sLa%20Bolsera%20%7C%20Barcelona!5e0!3m2!1ses!2ses!4v1761668195587!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <br>
