--- a/login.html
+++ b/login.html
@@ -9,9 +9,27 @@
 </head>
 
 <body>
+    <header>
+        <h1>LOGIN</h1>
+        <br>
+        <hr>
+        <div class="menu container">
+            <input type="checkbox" id="menu">
+            <label for="menu">
+                <img src="img/image (1).png" class="menu-icono" alt="Menú">
+            </label>
+            <nav class="navbar">
+                <ul>
+                    <li><a href="index.html">Inici</a></li>
+                    <li><a href="Contact.html">Contactans</a></li>
+                    <li><a href="obout.html">Sobre nosaltres</a></li>
+                    <li><a href="login.html">Inicia sessió</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
     <div class="login-container">
-        <h1>LOGIN</h1>
 
         <img src="./img/Iniciar_sessio.png" alt="Iniciar sessio" class="login-img">
 
