--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             caixes, les seves característiques, usos possibles i com adquirir-les. La temàtica principal gira entorn de
             la creativitat, el disseny i la utilitat d’aquestes caixes innovadores.</p>
 
-        <img src="./img/caixa-de-cartró.jpg" alt="caixa de cartró" width="400" height="300">
+        <img src="./img/caixa-de-cartró.jpg" class="caja" alt="caixa de cartró" width="400" height="300" style="align-items: center;">
 
         <hr>
 
