--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="Marc Reus, Reitman LL, Daniel Garcia" content="Josep">
     <meta name="description" content="plantilla">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="#">
+    <link rel="icon" type="image/x-icon" href="img/CajiLogo.png">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 
@@ -91,3 +91,4 @@
     </main>
 </body>
 </html>
+
